Improve the general documentation.